--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.6"
+    "@astrojs/preact": "^3.5.3",
+    "astro": "^4.16.6",
+    "preact": "^10.24.3"
   },
   "devDependencies": {
     "prettier-plugin-astro": "^0.14.1"
